[package]
name = "ch8"
version = "0.1.0"
authors = ["Adam Kelly <adam@cthulahoops.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chip8lib"
path = "src/lib.rs"

[[bin]]
name = "chip8"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
termion = "1"
